--- a/jupyter/vanilla_vae.ipynb
+++ b/jupyter/vanilla_vae.ipynb
@@ -8,9 +8,12 @@
    "outputs": [],
    "source": [
     "from typing import List, Callable, Union, Any, TypeVar, Tuple\n",
+    "import torch\n",
     "# from torch import tensor as Tensor\n",
     "\n",
-    "Tensor = TypeVar('torch.tensor')"
+    "Tensor = TypeVar('torch.tensor')\n",
+    "\n",
+    "print(f'{torch.cuda.is_available()=}')"
    ]
   },
   {
@@ -198,6 +201,226 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6d73f05c-85e9-49fa-b4b4-0e7b1ba79e53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "from torch import Tensor\n",
+    "from pathlib import Path\n",
+    "from typing import List, Optional, Sequence, Union, Any, Callable\n",
+    "from torchvision.datasets.folder import default_loader\n",
+    "from pytorch_lightning import LightningDataModule\n",
+    "from torch.utils.data import DataLoader, Dataset\n",
+    "from torchvision import transforms\n",
+    "from torchvision.datasets import CelebA\n",
+    "import zipfile\n",
+    "\n",
+    "\n",
+    "# Add your custom dataset class here\n",
+    "class MyDataset(Dataset):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "class MyCelebA(CelebA):\n",
+    "    \"\"\"\n",
+    "    A work-around to address issues with pytorch's celebA dataset class.\n",
+    "\n",
+    "    Download and Extract\n",
+    "    URL : https://drive.google.com/file/d/1m8-EBPgi5MRubrm6iQjafK2QMHDBMSfJ/view?usp=sharing\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def _check_integrity(self) -> bool:\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "\n",
+    "class OxfordPets(Dataset):\n",
+    "    \"\"\"\n",
+    "    URL = https://www.robots.ox.ac.uk/~vgg/data/pets/\n",
+    "    \"\"\"\n",
+    "    def __init__(self, \n",
+    "                 data_path: str, \n",
+    "                 split: str,\n",
+    "                 transform: Callable,\n",
+    "                **kwargs):\n",
+    "        self.data_dir = Path(data_path) / \"OxfordPets\"        \n",
+    "        self.transforms = transform\n",
+    "        imgs = sorted([f for f in self.data_dir.iterdir() if f.suffix == '.jpg'])\n",
+    "        \n",
+    "        self.imgs = imgs[:int(len(imgs) * 0.75)] if split == \"train\" else imgs[int(len(imgs) * 0.75):]\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.imgs)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        img = default_loader(self.imgs[idx])\n",
+    "\n",
+    "        if self.transforms is not None:\n",
+    "            img = self.transforms(img)\n",
+    "\n",
+    "        return img, 0.0 # dummy datat to prevent breaking \n",
+    "\n",
+    "class VAEDataset(LightningDataModule):\n",
+    "    \"\"\"\n",
+    "    PyTorch Lightning data module \n",
+    "\n",
+    "    Args:\n",
+    "        data_dir: root directory of your dataset.\n",
+    "        train_batch_size: the batch size to use during training.\n",
+    "        val_batch_size: the batch size to use during validation.\n",
+    "        patch_size: the size of the crop to take from the original images.\n",
+    "        num_workers: the number of parallel workers to create to load data\n",
+    "            items (see PyTorch's Dataloader documentation for more details).\n",
+    "        pin_memory: whether prepared items should be loaded into pinned memory\n",
+    "            or not. This can improve performance on GPUs.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        data_path: str,\n",
+    "        train_batch_size: int = 8,\n",
+    "        val_batch_size: int = 8,\n",
+    "        patch_size: Union[int, Sequence[int]] = (256, 256),\n",
+    "        num_workers: int = 0,\n",
+    "        pin_memory: bool = False,\n",
+    "        **kwargs,\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.data_dir = data_path\n",
+    "        self.train_batch_size = train_batch_size\n",
+    "        self.val_batch_size = val_batch_size\n",
+    "        self.patch_size = patch_size\n",
+    "        self.num_workers = num_workers\n",
+    "        self.pin_memory = pin_memory\n",
+    "\n",
+    "    def setup(self, stage: Optional[str] = None) -> None:\n",
+    "#       =========================  OxfordPets Dataset  =========================\n",
+    "\n",
+    "#         train_transforms = transforms.Compose([transforms.RandomHorizontalFlip(),\n",
+    "#                                               transforms.CenterCrop(self.patch_size),\n",
+    "# #                                               transforms.Resize(self.patch_size),\n",
+    "#                                               transforms.ToTensor(),\n",
+    "#                                                 transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225))])\n",
+    "\n",
+    "#         val_transforms = transforms.Compose([transforms.RandomHorizontalFlip(),\n",
+    "#                                             transforms.CenterCrop(self.patch_size),\n",
+    "# #                                             transforms.Resize(self.patch_size),\n",
+    "#                                             transforms.ToTensor(),\n",
+    "#                                               transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225))])\n",
+    "\n",
+    "#         self.train_dataset = OxfordPets(\n",
+    "#             self.data_dir,\n",
+    "#             split='train',\n",
+    "#             transform=train_transforms,\n",
+    "#         )\n",
+    "\n",
+    "#         self.val_dataset = OxfordPets(\n",
+    "#             self.data_dir,\n",
+    "#             split='val',\n",
+    "#             transform=val_transforms,\n",
+    "#         )\n",
+    "\n",
+    "#       =========================  CelebA Dataset  =========================\n",
+    "\n",
+    "        train_transforms = transforms.Compose([transforms.RandomHorizontalFlip(),\n",
+    "                                              transforms.CenterCrop(148),\n",
+    "                                              transforms.Resize(self.patch_size),\n",
+    "                                              transforms.ToTensor(),])\n",
+    "\n",
+    "        val_transforms = transforms.Compose([transforms.RandomHorizontalFlip(),\n",
+    "                                            transforms.CenterCrop(148),\n",
+    "                                            transforms.Resize(self.patch_size),\n",
+    "                                            transforms.ToTensor(),])\n",
+    "\n",
+    "        self.train_dataset = MyCelebA(\n",
+    "            self.data_dir,\n",
+    "            split='train',\n",
+    "            transform=train_transforms,\n",
+    "            download=False,\n",
+    "        )\n",
+    "\n",
+    "        # Replace CelebA with your dataset\n",
+    "        self.val_dataset = MyCelebA(\n",
+    "            self.data_dir,\n",
+    "            split='test',\n",
+    "            transform=val_transforms,\n",
+    "            download=False,\n",
+    "        )\n",
+    "#       ===============================================================\n",
+    "\n",
+    "    def train_dataloader(self) -> DataLoader:\n",
+    "        return DataLoader(\n",
+    "            self.train_dataset,\n",
+    "            batch_size=self.train_batch_size,\n",
+    "            num_workers=self.num_workers,\n",
+    "            shuffle=True,\n",
+    "            pin_memory=self.pin_memory,\n",
+    "        )\n",
+    "\n",
+    "    def val_dataloader(self) -> Union[DataLoader, List[DataLoader]]:\n",
+    "        return DataLoader(\n",
+    "            self.val_dataset,\n",
+    "            batch_size=self.val_batch_size,\n",
+    "            num_workers=self.num_workers,\n",
+    "            shuffle=False,\n",
+    "            pin_memory=self.pin_memory,\n",
+    "        )\n",
+    "\n",
+    "    def test_dataloader(self) -> Union[DataLoader, List[DataLoader]]:\n",
+    "        return DataLoader(\n",
+    "            self.val_dataset,\n",
+    "            batch_size=144,\n",
+    "            num_workers=self.num_workers,\n",
+    "            shuffle=True,\n",
+    "            pin_memory=self.pin_memory,\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48b44015-97e7-423a-8153-dac8b82b6202",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pytorch_lightning as pl\n",
+    "\n",
+    "\n",
+    "## Utils to handle newer PyTorch Lightning changes from version 0.6\n",
+    "## ==================================================================================================== ##\n",
+    "\n",
+    "\n",
+    "def data_loader(fn):\n",
+    "    \"\"\"\n",
+    "    Decorator to handle the deprecation of data_loader from 0.7\n",
+    "    :param fn: User defined data loader function\n",
+    "    :return: A wrapper for the data_loader function\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def func_wrapper(self):\n",
+    "        try: # Works for version 0.6.0\n",
+    "            return pl.data_loader(fn)(self)\n",
+    "\n",
+    "        except: # Works for version > 0.6.0\n",
+    "            return fn(self)\n",
+    "\n",
+    "    return func_wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "eb35737f",
    "metadata": {},
    "outputs": [],
@@ -208,7 +431,7 @@
     "from torch import optim\n",
     "#from models import BaseVAE\n",
     "#from models.types_ import *\n",
-    "from utils import data_loader\n",
+    "#from utils import data_loader\n",
     "import pytorch_lightning as pl\n",
     "from torchvision import transforms\n",
     "import torchvision.utils as vutils\n",
@@ -221,7 +444,7 @@
     "    def __init__(self,\n",
     "                 vae_model: VanillaVAE,\n",
     "                 params: dict) -> None:\n",
-    "        super(VAEXperiment, self).__init__()\n",
+    "        super().__init__()\n",
     "\n",
     "        self.model = vae_model\n",
     "        self.params = params\n",
@@ -343,14 +566,14 @@
     "import numpy as np\n",
     "from pathlib import Path\n",
     "#from models import *\n",
-    "from experiment import VAEXperiment\n",
+    "#from experiment import VAEXperiment\n",
     "import torch.backends.cudnn as cudnn\n",
     "from pytorch_lightning import Trainer\n",
     "from pytorch_lightning.loggers import TensorBoardLogger\n",
     "from pytorch_lightning.utilities.seed import seed_everything\n",
     "from pytorch_lightning.callbacks import LearningRateMonitor, ModelCheckpoint\n",
-    "from dataset import VAEDataset\n",
-    "from pytorch_lightning.plugins import DDPPlugin\n",
+    "#from dataset import VAEDataset\n",
+    "from pytorch_lightning.strategies import DDPStrategy\n",
     "\n",
     "\n",
     "filename = '../configs/vae.yaml'\n",
@@ -360,7 +583,7 @@
     "        config = yaml.safe_load(file)\n",
     "    except yaml.YAMLError as exc:\n",
     "        print(exc)\n",
-    "\n",
+    "config['trainer_params']['gpus'] = [0]\n",
     "\n",
     "tb_logger =  TensorBoardLogger(save_dir=config['logging_params']['save_dir'],\n",
     "                               name=config['model_params']['name'],)\n",
@@ -384,7 +607,8 @@
     "                                     monitor= \"val_loss\",\n",
     "                                     save_last= True),\n",
     "                 ],\n",
-    "                 strategy=DDPPlugin(find_unused_parameters=False),\n",
+    "                 #strategy=DDPStrategy(find_unused_parameters=False),\n",
+    "                 strategy=None,\n",
     "                 **config['trainer_params'])\n",
     "\n",
     "\n",
